# lpr

./: .gitignore  README.md  db.sqlite3  docker-compose.yml  heroku.yml  manage.py  pyproject.toml
accounts_app/: urls.py
departments_app/: models.py  urls.py  views.py
home_app/: urls.py  views.py
lpr_project/: settings.py  urls.py  wsgi.py
news_app/: admin.py  models.py  urls.py  utils.py  views.py
news_app/migrations/: 0001_initial.py  0002_auto_20190130_1304.py  0003_auto_20190130_1308.py
people_app/: admin.py  models.py  urls.py  views.py
pip-wheel-metadata/: lpr_project-0.1.0-py3-none-any.whl
pip-wheel-metadata/lpr_project-0.1.0.dist-info/: METADATA  RECORD
principles_app/: admin.py  apps.py  models.py  urls.py  views.py
principles_app/migrations/: 0001_initial.py  0002_auto_20190207_0648.py  0003_auto_20190207_1350.py  0004_auto_20190207_1353.py  0005_auto_20190212_0609.py
static/: base.css  old_base.css
static/js/: base.js
static/scss/: _bottomnav.scss  _cards.scss  _narrower.scss  _pagetitle.scss  _pagination.scss  _program.scss  _program_grid.scss  _topper_menu.scss  base.css  base.css.map  base.scss
templates/: base.html
templates/accounts_app/: logout.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html
templates/departments_app/: _department_search.html  department_list.html
templates/home_app/: index.html
templates/news_app/: current_user_post_detail.html  current_user_post_list.html  pagination.html  post_create.html  (+6 more)
web/: Dockerfile  requirements.txt
(+181 files in other folders)
